--- a/about.html
+++ b/about.html
@@ -10,17 +10,26 @@
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
     <script src="html.js"></script>
 </head>
 <body>
     <header>
-     IMM News Network
+        <img src="../favicon_io/apple-touch-icon.png" alt="IMM News Network Logo">
+            <ul>
+                <li><a href="HTML.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
     </header>
 
-    <section class="about-content">
+    <section id="About">
         <h2>About Us</h2>
         <p>At IMM News Network, we're committed to bringing you the latest insights and news from the world of industry, technology, and career development. Our mission is to provide you with informative, engaging, and up-to-date content that empowers you to stay informed and make informed decisions in your professional journey. We're dedicated to delivering valuable information, thought-provoking articles, and expert perspectives on a wide range of topics. Whether you're a seasoned professional or just starting your career, we're here to support your growth and learning. Join our community of like-minded individuals dedicated to continuous learning and professional advancement. We believe that knowledge is power, and we're here to help you unlock your full potential.</p>
     </section>
+    
 
     <footer>
         <p>About cookie usage. <span id="cookie-consent-text"></span></p>
