--- a/Contact.html
+++ b/Contact.html
@@ -3,45 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="HTML.css">
     <title>Contact</title>
-    <link rel="stylesheet" type="text/css" href="HTML.css"> 
     <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
     <script src="html.js"></script>
 </head>
 <body>
     <section class="contact-form">
-            <header>Contact form</header>
-            <form action="contact.php" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>                
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>   
-                <label for="categories">Category Interests:</label>
-                <input type="checkbox" id="industry" name="category[]" value="Industry"> Industry
-                <input type="checkbox" id="technical" name="category[]" value="Technical"> Technical
-                <input type="checkbox" id="career" name="category[]" value="Career"> Career
-                <br>   
-                <label for="role">Your Role:</label>
-                <select id="role" name="role">
-                    <option value="Writer">Writer</option>
-                    <option value="Contributor">Contributor</option>
-                    <option value="Administrator">Administrator</option>
-                </select>
-                
-                <button type="submit">Submit</button>
-            </form>
-
-            <footer>
-                <p>About cookie usage. <span id="cookie-consent-text"></span></p>
-                <button id="accept-cookies-button" onclick="acceptCookies()">Accept Cookies</button>
-                <button id="revoke-cookies-button" onclick="revokeCookies()">Revoke</button>
-                <a href="#" id="reaccept-cookies-link" style="display: none;" onclick="reacceptCookies()">Reaccept Cookies</a>
-            </footer>
-        
+        <header>
+            <img src="../favicon_io/apple-touch-icon.png" alt="IMM News Network Logo">
+                <ul>
+                    <li><a href="HTML.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
+                </ul>
+        </header>
+        <form action="contact.php" method="post">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" required>
+            <label for="categories">Category Interests:</label>
+            <input type="checkbox" id="industry" name="category[]" value="Industry"> Industry
+            <input type="checkbox" id="technical" name="category[]" value="Technical"> Technical
+            <input type="checkbox" id="career" name="category[]" value="Career"> Career
+            <label for="role">Your Role:</label>
+            <select id="role" name="role">
+                <option value="Writer">Writer</option>
+                <option value="Contributor">Contributor</option>
+                <option value="Administrator">Administrator</option>
+            </select>
+            <button type="submit">Submit</button>
+        </form>
+    </section>
+    <footer>
+        <p>About cookie usage. <span id="cookie-consent-text"></span></p>
+        <button id="accept-cookies-button" onclick="acceptCookies()">Accept Cookies</button>
+        <button id="revoke-cookies-button" onclick="revokeCookies()">Revoke</button>
+        <a href="#" id="reaccept-cookies-link" style="display: none;" onclick="reacceptCookies()">Reaccept Cookies</a>
+    </footer>
 </body>
 </html>
