--- a/HTML.html
+++ b/HTML.html
@@ -77,8 +77,8 @@
       <a href="../Articles/featuredArticle.html" target="_blank">Read more</a>
     </section>
 
-    <div class="category">
-      <section class="industry">
+    <div class="parent">
+      <div class="Industry">
         <h2>Industry</h2>
         <div class="article">
           <h3>Digital I/O with Arduino Boards</h3>
@@ -101,11 +101,12 @@
           </p>
           <a href="../Articles/article2.html" target="_blank">Read more</a>
         </div>
-      </section>
+      </div>
 
-      <section class="technical">
-        <h2>Technical</h2>
+      <div class="technical">
         <div class="article">
+          <h2>Technical</h2>        
+          <div class="article">
           <h3>
             Shifting perspective: ‘Inception VR’ makes user question their
             reality
@@ -118,7 +119,7 @@
             shift in reality that may leave them with new perspectives?
           </p>
           <a href="../Articles/article3.html" target="_blank">Read more</a>
-        </div>
+          </div>
         <div class="article">
           <h3>Recalling places of mental and physical escape using AR</h3>
           <img src="../Images/article4.png" />
@@ -137,9 +138,9 @@
           </p>
           <a href="../Articles/article4.html" target="_blank">Read more</a>
         </div>
-      </section>
+        </div>
 
-      <section class="career">
+      <div class="career">
         <h2>Career</h2>
         <div class="article">
           <h3>MA Digital Narratives is now open for applications!</h3>
@@ -163,18 +164,18 @@
           </p>
           <a href="../Articles/article6.html" target="_blank">Read more</a>
         </div>
-      </section>
+      </div>  
     </div>
 
-    <iframe
+    <!-- <iframe
       width="560"
       height="315"
       src="https://www.youtube.com/embed/utISaj9ScT4?si=0zUDTaf7gJUBkUS9"
       title="YouTube video player"
       frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\"
-      allowfullscreen
-    ></iframe>
+      allowfullscreen>
+    </iframe> -->
 
     <address class="contact info">
       <h3>Contact Information</h3>
