--- a/HTML.html
+++ b/HTML.html
@@ -45,6 +45,7 @@
       </ul>
     </header>
 
+   <div class="main-content">
     <section id="WELCOME">
       <h1>WELCOME</h1>
       <p>
@@ -104,7 +105,6 @@
       </div>
 
       <div class="technical">
-        <div class="article">
           <h2>Technical</h2>        
           <div class="article">
           <h3>
@@ -138,8 +138,7 @@
           </p>
           <a href="../Articles/article4.html" target="_blank">Read more</a>
         </div>
-        </div>
-
+      </div>
       <div class="career">
         <h2>Career</h2>
         <div class="article">
@@ -166,23 +165,52 @@
         </div>
       </div>  
     </div>
+    <section id="visitors">
+      <h4>Site Visitors</h4>
+      <table>
+          <thead>
+              <tr>
+                  <th>Month</th>
+                  <th>Visitors</th>
+              </tr>
+          </thead>
+          <tbody>
+              <tr>
+                  <td>May</td>
+                  <td>3,200</td>
+              </tr>
+              <tr>
+                  <td>June</td>
+                  <td>2,800</td>
+              </tr>
+              <tr>
+                  <td>July</td>
+                  <td>3,500</td>
+              </tr>
+              <tr>
+                  <td>August</td>
+                  <td>4,000</td>
+              </tr>
+              <tr>
+                  <td>September</td>
+                  <td>3,700</td>
+              </tr>
+              <tr>
+                  <td>October</td>
+                  <td>2,500</td>
+              </tr>
+          </tbody>
+      </table>
+  </section>
 
-    <!-- <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/utISaj9ScT4?si=0zUDTaf7gJUBkUS9"
-      title="YouTube video player"
-      frameborder="0"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\"
-      allowfullscreen>
-    </iframe> -->
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/utISaj9ScT4?si=0zUDTaf7gJUBkUS9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>
 
     <address class="contact info">
       <h3>Contact Information</h3>
       <p>Email: gloriacao@gmail.com</p>
       <p>Phone: 058-646-3607</p>
     </address>
-
+</div>
     <footer>
       <p>About cookie usage. <span id="cookie-consent-text"></span></p>
       <button id="accept-cookies-button" onclick="acceptCookies()">
